Correct email placeholder

--- a/index.html
+++ b/index.html
@@ -66,11 +66,26 @@
 
       <form>
         <label for="fname">First name:</label>
-        <input type="text" id="fname" name="fname" placeholder="First Name" /><br><br>
+        <input
+          type="text"
+          id="fname"
+          name="fname"
+          placeholder="First Name"
+        /><br /><br />
         <label for="lname">Last name:</label>
-        <input type="text" id="lname" name="lname" placeholder="Last Name"/><br><br>
+        <input
+          type="text"
+          id="lname"
+          name="lname"
+          placeholder="Last Name"
+        /><br /><br />
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email" placeholder="email@emai"/><br><br>
+        <input
+          type="text"
+          id="email"
+          name="email"
+          placeholder="email@email.com"
+        /><br /><br />
         <input type="submit" value="Submit" />
       </form>
     </main>
